add route for book-detail which was renamed in reading-detail in ReadingController.java